--- a/app/src/main/res/layout/activity_ad_mania.xml
+++ b/app/src/main/res/layout/activity_ad_mania.xml
@@ -1,82 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="#262626"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#262626"
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
-        android:src="@drawable/logo"/>
+        android:src="@drawable/logo" />
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
-                    app:cardBackgroundColor="#1a1a1a"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp">
+                    android:layout_margin="10dp"
+                    app:cardBackgroundColor="#1a1a1a">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="50dp"
-                        android:padding="10dp"
                         android:layout_gravity="center"
                         android:gravity="center"
-                        android:text="Ad-Mania"/>
+                        android:padding="10dp"
+                        android:text="Ad-Mania"
+                        android:textSize="50dp" />
 
                 </android.support.v7.widget.CardView>
+
                 <android.support.v7.widget.CardView
-                    app:cardElevation="5dp"
-                    app:cardBackgroundColor="#1a1a1a"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    app:cardBackgroundColor="#1a1a1a"
+                    app:cardElevation="5dp">
+
                     <TextView
-                        android:layout_margin="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
                         android:padding="10dp"
-                        android:textSize="17dp"
-                        android:text="Showcase your conviencing and marketing talent by selling the any given object\n\n,<br>Round1: The contestant has to sell the given product / hardware to the audience, winner will be decided on the contestants convincing skills.\n<br>Round2: The contestant will be blindfolded and has to identify the product by touch and again try and sell it."/>
+                        android:text="Showcase your conviencing and marketing talent by selling the any given object\n\nRound1: The contestant has to sell the given product / hardware to the audience, winner will be decided on the contestants convincing skills.\nRound2: The contestant will be blindfolded and has to identify the product by touch and again try and sell it."
+                        android:textSize="17dp" />
                 </android.support.v7.widget.CardView>
+
                 <android.support.v7.widget.CardView
-                    app:cardElevation="5dp"
-                    app:cardBackgroundColor="#1a1a1a"
-                    android:layout_margin="10dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    app:cardBackgroundColor="#1a1a1a"
+                    app:cardElevation="5dp">
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
+
                         <TextView
-                            android:layout_margin="5dp"
-                            android:textSize="20dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
                             android:text="Contact"
-                            />
+                            android:textSize="20dp" />
+
                         <TextView
-                            android:layout_margin="5dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
                             android:autoLink="phone"
-                            android:textSize="15dp"
-                            android:text="@string/Ad"/>
+                            android:text="@string/Ad"
+                            android:textSize="15dp" />
                     </LinearLayout>
 
                 </android.support.v7.widget.CardView>
